--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="assets/img/favicon.png" type="image/png" sizes="32x32">
     <!-- Main css -->
     <link href="assets/css/main.css" rel=stylesheet>
+    <link href="assets/css/home-main.css" rel=stylesheet>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
