--- a/contacto.html
+++ b/contacto.html
@@ -78,7 +78,7 @@
         <a href="index.html">Home</a>
         <span class="letter"><i class="fa fa-bars"></i></span>
         <span class="close"><i class="fa fa-times"></i></span>
-        <a href="proyectos.html">Proyectes</a>
+        <a href="proyectos.html">Projectes</a>
         <span>]</span>
     </nav>
 </header>
