--- a/proyectos.html
+++ b/proyectos.html
@@ -98,13 +98,13 @@
         <div class="project-type orange">
             <h2 class="title">Manteniment</h2>
             <p>
-                Afegir noves funcionalitats a projectes ja operatius, fer tasques de manteniment, per entre d'altres, tenir sempre actualitzat el codi amb el que es treballa.
+                Afegir noves funcionalitats a projectes ja operatius, fer tasques de manteniment per, entre d'altres, tenir sempre actualitzat el codi amb el que es treballa.
             </p>
         </div>
         <div class="project-type red">
             <h2 class="title">Wordpress</h2>
             <p>
-                Creació de pàgines webs per a negocis i botigues online, amb la creació de temes personalitzats sempre adaptats a les necessitats que es demanen.
+                Creació de pàgines web tant per a botigues online com per a altres negocis, amb la creació de temes personalitzats, sempre adaptats a les necessitats que es demanen.
             </p>
         </div>
     </div>
@@ -119,7 +119,7 @@
                     <img src="assets/img/col.png">
                 </div>
                 <div class="description">
-                    <p>Mantenir i afegir noves funcionalitats al procés de contractació de Naturgy així com solventant petits errors que es puguin ocasionar al modificar el codi.</p>
+                    <p>Mantenir i afegir noves funcionalitats al procés de contractació de Naturgy, així com solventar petits errors que es puguin ocasionar a l'hora modificar el codi.</p>
                     <div class="tags">
                         <div class="tag">Yii</div>
                         <div class="tag">Symfony</div>
@@ -137,7 +137,7 @@
                     <img src="assets/img/easysales.png">
                 </div>
                 <div class="description">
-                    <p>Creació, junt amb la resta de l'equip, i manteniment d'un aplicatiu per gestionar les ventes i/o noves contractacions de naturgy així com tot un procés de contractació personalitzat.</p>
+                    <p>Conjuntament amb la resta de l'equip de treball, creació i manteniment d'un aplicatiu per gestionar les ventes i/o noves contractacions de Naturgy, així com tot un procés de contractació personalitzat.</p>
                     <div class="tags">
                         <div class="tag">Symfony</div>
                         <div class="tag">Html</div>
@@ -154,7 +154,7 @@
                     <img src="assets/img/amazon.png">
                 </div>
                 <div class="description">
-                    <p>Creació i manteniment d'una página que permet als usuaris de Naturgy gaudir descomptes per les seves compres a Amazon amb un backoffice per gestionar les dades.</p>
+                    <p>Creació i manteniment d'una página que permet als clients de Naturgy obtenir i gaudir de descomptes per les seves compres fetes a Amazon, tot això amb un backoffice darrere per gestionar les dades.</p>
                     <div class="tags">
                         <div class="tag">Yii</div>
                         <div class="tag">Html</div>
@@ -171,7 +171,7 @@
                     <img src="assets/img/takeit.png">
                 </div>
                 <div class="description">
-                    <p>Projecte de final de curs, realitzat amb un altre company, que permet gestionar un restaurant, ja siguin comandes a cuina, stock, pagaments i amb un menú virtual on els clients poden realitzar la seva comanda des de el seu teléfon </p>
+                    <p>Projecte final de grau, realitzat conjuntament amb un company. Consta d'una APP web que permet gestionar un negoci de restauració, des de l'enviament de comandes a cuina, seguiment de l'stock de l'establiment, fins al menú virtual, on el propi client, des del seu teléfon, és qui gestiona les seves comandes i els pagaments.</p>
                     <div class="tags">
                         <div class="tag">Symfony</div>
                         <div class="tag">Html</div>
@@ -188,7 +188,7 @@
                     <img src="assets/img/mecarun.png">
                 </div>
                 <div class="description">
-                    <p>E-commerce amb plantilla feta a mida per un client que té un negoci de productes per als motors dels cotxes </p>
+                    <p>Projecte d'E-commerce enfocat a la venta de productes per a motors de vehicles. Elaboració d'una plantilla feta a mida segons els requeriments del client adaptada a Woocommerce i la configuració d'aquet.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                         <div class="tag">Woocoommerce</div>
@@ -203,7 +203,7 @@
                     <img src="assets/img/aida.png">
                 </div>
                 <div class="description">
-                    <p>Página Wordpress amb plantilla feta a mida per a una clienta que te un negoci de psicologia.</p>
+                    <p>Projecte d'una página web a l'estil portafolis per a la consulta d'una psicologa especialista. Wordpress amb plantilla feta a mida i amb el seu propi blog.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                     </div>
@@ -217,7 +217,7 @@
                     <img src="assets/img/mysnikers.png">
                 </div>
                 <div class="description">
-                    <p>Mantenir i afegir noves funcionalitats a un ecommerce de venda online de sabates.</p>
+                    <p>Projecte d'E-commerce destinat a la venda online de calçat, que requeria manteniment i la creació de noves funcionalitats.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                         <div class="tag">Woocoommerce</div>
@@ -232,7 +232,7 @@
                     <img src="assets/img/engiser.png">
                 </div>
                 <div class="description">
-                    <p>Mantenir un ecommerce per a un client que es dedica a la venda de recanvis de cotxes.</p>
+                    <p>Projecte d'E-commerce destinat a la venda i subministrament de recanvis per a vehicles, que requeria manteniment i la creació de noves funcionalitats.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                         <div class="tag">Woocoommerce</div>
