--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <nav id="nav">
         <span>[</span>
-        <a href="proyectos.html">Proyectes</a>
+        <a href="proyectos.html">Projectes</a>
         <span class="letter"><i class="fa fa-bars"></i></span>
         <span class="close"><i class="fa fa-times"></i></span>
         <a href="contacto.html">Contacte</a>
@@ -88,29 +88,33 @@
         <h2>Jose Hurtado</h2><br>
         <h3 class="animated-text">Full*Stack*Developer</h3>
         <div class="content container">
-            <h4>Coneix-me</h4>
-            <p class="text">Nascut i resident a Barcelona, actualment amb 22 anys. Des de ben petit he estat interessat en l'àmbit informàtic. El meu primer contacte amb el desenvolupament web va ser a l'ESO, on varem tenir un mòdul dedicat a HTML i CSS. Des d'aquell moment vaig saber que aquest món marcaria la meva carrera professional i és des d'aleshores, que vaig enfocar la meva formació en aquest camí. En els moments que desconecto de feina i ordinador acostumo a dedidcar el temps per a mi, fer esport, anar en bici o simplement relaxant-me amb una bona cervesa amb els amics.</p>
-            <h4>Estudis</h4>
+            <h4>El meu inici</h4>
+            <p class="text">Nascut i resident a Barcelona, actualment amb 22 anys. Des de ben petit m'ha interessat l'àmbit informàtic, <span class="show-on-mobile">[...]</span><span class="hide-on-modile"> per simple curiositat i de manera autodidàctica.
+                El meu primer contacte amb el desenvolupament web no va ser fins a l'ESO on, perquè no dir-ho, cap assignatura duia el meu nom. Però és aleshores quan gràcies a un mòdul dedicat a HTML i CSS vaig poder endinsar-me una mica en la matèria i, adonar-me que m'omplia i em naixia una motivació per seguir aprenent. Des d'aquell moment vaig saber que aquest món marcaria la meva carrera professional d'una manera o altra, i és des d'aleshores, que vaig enfocar la meva formació cap aquest camí. En els moments que desconnecto de feina i del teclat acostumo a dedicar el temps per a mi, fer esport, anar en bici o simplement relaxar-me amb una bona cervesa i amics.</span></p>
+            <h4>Formació en l'àmbit</h4>
             <ul class="text">
                 <li>
-                    Curs desenvolupament web, Academia Cepi Base, Barcelona (2015)
+                    Curs Desenvolupament Web, Academia Cepi Base, Barcelona (2015)
                 </li>
                 <li>
-                    Grau superior de desenvolupament web, Escola del Treball, Barcelona (2017-2019)
+                    Tècnic Superior en Desenvolupament Web, Escola del Treball, Barcelona (2017-2019)
                 </li>
                 <li>
                     Iron Hack Web Development, Barcelona (actualment)
                 </li>
             </ul>
-            <h4>Altres</h4>
-            <p class="text">Estic treballant com a desenvolupador web full stack a l'empresa Suma TD, mantenint i desenvolupant nous projectes per a diversos clients, un d'ells Naturgy.<br> M'agradaria finalitzar la meva carrera en els ámbits de la Inteligencia Artificial i la realitat virtual, però és cert que la necessitat constant d'innovar-se un mateix pot obrir-me la porta a conèixer nous àmbits dins d'aquest món profesional. </p>
+            <h4>El meu present</h4>
+            <p class="text">Actualment treballo com a desenvolupador web full stack en una agència digital <span class="show-on-mobile">[...]</span><span class="hide-on-modile"> especialitzada en el desenvolupament i disseny d'aplicacions i software a mida, Suma TD, Barcelona.
+                Les meves tasques s'enfoquen en el manteniment i desenvolupament de nous projectes per a una diversitat de clients, un d'ells i pel qui més temps dedico: Naturgy.
+                M'agradaria finalitzar la meva carrera centrant esforços en l'àmbit de la Intel·ligència Artificial i la Realitat Virtual, però també és cert que la necessitat constant d'innovar-me i no voler deixar mai d'aprendre pot obrir-me més portes i animar-me a conèixer una infinitat de branques dins d'aquest món professional...</span></p>
+            <h4 style="text-align: right;font-size: 26px;">... i seguir formant-me per adaptar-me a un futur</h4>
         </div>
     </div>
 </section>
 <section class="habilities container">
     <div class="section-presentation">
         <h3 class="title">{ Coneixements }</h3>
-        <p>Professionalment m'he dedicat sempre a PHP com a llenguatge servidor, per això podria dir que els meus punts forts son Html, Css, Js, Jquery al FrontEnd i tot lo relacionat amb Php i Mysql al BackEnd accentuant el framework Symfony</p>
+        <p>Professionalment he treballat sempre amb PHP com a llenguatge servidor, és per això que podria dir que els meus punts forts ara mateix són l'HTML, CSS, JS, Jquery per al FrontEnd, i tot allò que relaciona amb PHP i Mysql per treballar el BackEnd, destacant sobretot el framework Symfony.</p>
     </div>
     <div class="content">
         <div class="block">
@@ -223,7 +227,7 @@
             </div>
         </div>
         <div class="block">
-            <h4 class="title">Sistemas / Otros</h4>
+            <h4 class="title">Sistemes i d'altres</h4>
             <div class="cards">
                 <div class="card" data-hability="90">
                     <img src="assets/img/mysql.png">
@@ -277,7 +281,7 @@
 <section class="other-habilities container">
     <div class="section-presentation">
         <h3 class="title">{ Altres habilitats }</h3>
-        <p>El sistema operatiu que utilitzo es Ubuntu ( linux ) encara que també tinc experiència amb alguna distribució de Red Hat. Quan programo la meva prioritat és sempre deixar un codi llegible i minimitzan-lo al màxim possible per així fer-ho mes mantenible.</p>
+        <p>El sistema operatiu que utilitzo es Ubuntu (Linux) tot i haver treballat i tenir també experiència en alguna distribució de Red Hat. A l'hora de programar la meva prioritat és sempre deixar un codi llegible, ben organitzat, i al màxim de minimitzat (dins les possibilitats, és clar) per aconseguir així que la feina posterior de manteniment resulti una tasca més àgil, neta i menys feixuga.</p>
     </div>
     <div class="content">
         <div class="card" data-hability="80">
@@ -298,7 +302,7 @@
             <img src="assets/img/clean-code.png">
             <div class="description">
                 <div class="title">Clean Code</div>
-                <p>Si no es un codi net,<br> no es un codi bo</p>
+                <p>Si no és un codi net,<br>no és un bon codi</p>
             </div>
         </div>
         <div class="card" data-hability="80">
@@ -320,12 +324,12 @@
 <footer>
     <div class="i-contact-you container">
         <div class="info-text">
-            <h3 class="title">Vols que contacti amb tu?</h3>
-            <p>Si ho desitges, et contacto a l'email que pots introduir a continuació</p>
+            <h3 class="title">Vols que parlem?</h3>
+            <p>Si ho desitges, introdueix aquí el teu email i em posaré en contacte amb tu.</p>
         </div>
         <div class="form-send-email">
             <input id="email" name="email" placeholder="El teu correu" type="email">
-            <button id="submitEmail" type="submit">Envía</button>
+            <button id="submitEmail" type="submit">Envia</button>
         </div>
     </div>
     <div class="footer">
