--- a/proyectos.html
+++ b/proyectos.html
@@ -3,7 +3,7 @@
 <head>
     <meta content="initial-scale=1, maximum-scale=1" name="viewport">
     <meta charset="UTF-8">
-    <title>Proyectes</title>
+    <title>Projectes</title>
     <link rel="icon" href="assets/img/favicon.png" type="image/png" sizes="32x32">
     <!-- Main css -->
     <link href="assets/css/main.css" rel=stylesheet>
