--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 </li>
             </ul>
             <h4>El meu present</h4>
-            <p class="text">Actualment treballo com a desenvolupador web full stack en una agència digital <span class="show-on-mobile">[...]</span><span class="hide-on-modile"> especialitzada en el desenvolupament i disseny d'aplicacions i software a mida, Suma TD, Barcelona.
-                Les meves tasques s'enfoquen en el manteniment i desenvolupament de nous projectes per a una diversitat de clients, un d'ells i pel qui més temps dedico: Naturgy.
+            <p class="text">Actualment soc programador freelance. He treballat com a desenvolupador web full stack en una agència digital <span class="show-on-mobile">[...]</span><span class="hide-on-modile"> especialitzada en el desenvolupament i disseny d'aplicacions i software a mida, Suma TD, Barcelona.
+                Les meves tasques s'enfocaven manteniment i desenvolupament de nous projectes per a una diversitat de clients, un d'ells i pel qui més temps he dedicat: Naturgy.
                 M'agradaria finalitzar la meva carrera centrant esforços en l'àmbit de la Intel·ligència Artificial i la Realitat Virtual, però també és cert que la necessitat constant d'innovar-me i no voler deixar mai d'aprendre pot obrir-me més portes i animar-me a conèixer una infinitat de branques dins d'aquest món professional...</span></p>
             <h4 style="text-align: right;font-size: 26px;">... i seguir formant-me per adaptar-me a un futur</h4>
         </div>
