[master] - added fair rent project

--- a/proyectos.html
+++ b/proyectos.html
@@ -22,7 +22,9 @@
             </svg>
         </a>
         <a href="https://github.com/jhurtado123" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+            </svg>
         </a>
         <a href="mailto:hurtadojose89@gmail.com">
             <svg height="24" style=" fill:#000000;" viewBox="0 0 48 48"
@@ -36,11 +38,13 @@
                 <path d="M6.745,40.5H42.5c1.933,0,3.5-1.567,3.5-3.5V11.5L6.745,40.5z" fill="#eee"></path>
                 <path d="M25.745,40.5H42.5c1.933,0,3.5-1.567,3.5-3.5V11.5L18.771,31.616L25.745,40.5z"
                       fill="#e0e0e0"></path>
-                <path class="fill" d="M42.5,9.5h-37C3.567,9.5,2,9.067,2,11v26c0,1.933,1.567,3.5,3.5,3.5H7V12h34v28.5h1.5c1.933,0,3.5-1.567,3.5-3.5V11C46,9.067,44.433,9.5,42.5,9.5z"
+                <path class="fill"
+                      d="M42.5,9.5h-37C3.567,9.5,2,9.067,2,11v26c0,1.933,1.567,3.5,3.5,3.5H7V12h34v28.5h1.5c1.933,0,3.5-1.567,3.5-3.5V11C46,9.067,44.433,9.5,42.5,9.5z"
                       fill="#ca3737"></path>
                 <path d="M42.5,7.5H24H5.5C3.567,7.5,2,9.036,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.036,44.433,7.5,42.5,7.5z"
                       fill="#f5f5f5"></path>
-                <path class="fill" d="M43.246,7.582L24,21L4.754,7.582C3.18,7.919,2,9.297,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.297,44.82,7.919,43.246,7.582z"
+                <path class="fill"
+                      d="M43.246,7.582L24,21L4.754,7.582C3.18,7.919,2,9.297,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.297,44.82,7.919,43.246,7.582z"
                       fill="#e84f4b"></path>
             </svg>
         </a>
@@ -63,19 +67,22 @@
         <div class="project-type yellow">
             <h2 class="title">Des de zero</h2>
             <p>
-                Analitzar i executar els requeriments donats per part del client, amb la finalitat de convertir les seves necessitats i "desitjos" web en una eina funcional i efectiva per al seu negoci, projecte...
+                Analitzar i executar els requeriments donats per part del client, amb la finalitat de convertir les
+                seves necessitats i "desitjos" web en una eina funcional i efectiva per al seu negoci, projecte...
             </p>
         </div>
         <div class="project-type orange">
             <h2 class="title">Manteniment</h2>
             <p>
-                Afegir noves funcionalitats a projectes ja operatius, fer tasques de manteniment per, entre d'altres, tenir sempre actualitzat el codi amb el que es treballa.
+                Afegir noves funcionalitats a projectes ja operatius, fer tasques de manteniment per, entre d'altres,
+                tenir sempre actualitzat el codi amb el que es treballa.
             </p>
         </div>
         <div class="project-type red">
             <h2 class="title">Wordpress</h2>
             <p>
-                Creació de pàgines web tant per a botigues online com per a altres negocis, amb la creació de temes personalitzats, sempre adaptats a les necessitats que es demanen.
+                Creació de pàgines web tant per a botigues online com per a altres negocis, amb la creació de temes
+                personalitzats, sempre adaptats a les necessitats que es demanen.
             </p>
         </div>
     </div>
@@ -84,6 +91,41 @@
     <h2 class="title">i aquí uns exemples...</h2>
     <div class="projects">
         <div class="project">
+            <h3 class="title">Fair Rent</h3>
+            <div class="content">
+                <div class="image">
+                    <img src="assets/img/rentapp.png">
+                </div>
+                <div class="description">
+                    <p>
+                        Proyecte final del módul 2 de l'Ironhack.
+                        Juntament amb un altre company disseny i creació d'una aplicació web que permet llogar pisos a
+                        barcelona amb un preu just.
+                        L'aplicació ofereix les funcionalitats de :
+                    <ul>
+                        <li>Busqueda i filtre d'anuncis</li>
+                        <li>Dibuixar en un mapa la zona on vols trobar pisos</li>
+                        <li>Obrir un chat directe amb el propietari per acordar una cita</li>
+                        <li>Gestió de cites acordades per anar a veure el pis</li>
+                        <li>Sistema de notificacions</li>
+
+                    </ul>
+                    <p>Duració del proyecte : 3 setmanes</p>
+
+                    <a href="https://jhurtado123.github.io/gameproject/" target="_blank">Veure l'aplicació</a>
+                    </p>
+                    <div class="tags">
+                        <div class="tag">Html</div>
+                        <div class="tag">Css</div>
+                        <div class="tag">Javascript</div>
+                        <div class="tag">WebSockets</div>
+                        <div class="tag">Express.js</div>
+                        <div class="tag">MongoDB</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="project">
             <h3 class="title">Arac Revenge</h3>
             <div class="content">
                 <div class="image">
@@ -91,7 +133,9 @@
                 </div>
                 <div class="description">
                     <p>Creació d'un petit videojoc com a projecte final del primer módul de l'Ironhack
-                        <a href="https://jhurtado123.github.io/gameproject/" target="_blank">Demo ( Only PC, not responsive )</a>
+                        <a href="https://jhurtado123.github.io/gameproject/" target="_blank">Demo ( Only PC, not
+                            responsive )</a>
+                    <p>Duració del proyecte : 2 setmanes</p>
                     </p>
                     <div class="tags">
                         <div class="tag">Html</div>
@@ -109,7 +153,8 @@
                     <img src="assets/img/easygo.png">
                 </div>
                 <div class="description">
-                    <p>Conjuntament amb la resta de l'equip de treball, creació d'un aplicatiu que permet al client contractar serveis de reparació dels electrodomèstics.</p>
+                    <p>Conjuntament amb la resta de l'equip de treball, creació d'un aplicatiu que permet al client
+                        contractar serveis de reparació dels electrodomèstics.</p>
                     <div class="tags">
                         <div class="tag">Symfony</div>
                         <div class="tag">Html</div>
@@ -126,7 +171,8 @@
                     <img src="assets/img/col.png">
                 </div>
                 <div class="description">
-                    <p>Mantenir i afegir noves funcionalitats al procés de contractació de Naturgy, així com solventar petits errors que es puguin ocasionar a l'hora modificar el codi.</p>
+                    <p>Mantenir i afegir noves funcionalitats al procés de contractació de Naturgy, així com solventar
+                        petits errors que es puguin ocasionar a l'hora modificar el codi.</p>
                     <div class="tags">
                         <div class="tag">Yii</div>
                         <div class="tag">Symfony</div>
@@ -144,7 +190,9 @@
                     <img src="assets/img/easysales.png">
                 </div>
                 <div class="description">
-                    <p>Conjuntament amb la resta de l'equip de treball, creació i manteniment d'un aplicatiu per gestionar les ventes i/o noves contractacions de Naturgy, així com tot un procés de contractació personalitzat.</p>
+                    <p>Conjuntament amb la resta de l'equip de treball, creació i manteniment d'un aplicatiu per
+                        gestionar les ventes i/o noves contractacions de Naturgy, així com tot un procés de contractació
+                        personalitzat.</p>
                     <div class="tags">
                         <div class="tag">Symfony</div>
                         <div class="tag">Html</div>
@@ -161,7 +209,9 @@
                     <img src="assets/img/amazon.png">
                 </div>
                 <div class="description">
-                    <p>Creació i manteniment d'una página que permet als clients de Naturgy obtenir i gaudir de descomptes per les seves compres fetes a Amazon, tot això amb un backoffice darrere per gestionar les dades.</p>
+                    <p>Creació i manteniment d'una página que permet als clients de Naturgy obtenir i gaudir de
+                        descomptes per les seves compres fetes a Amazon, tot això amb un backoffice darrere per
+                        gestionar les dades.</p>
                     <div class="tags">
                         <div class="tag">Yii</div>
                         <div class="tag">Html</div>
@@ -178,7 +228,10 @@
                     <img src="assets/img/takeit.png">
                 </div>
                 <div class="description">
-                    <p>Projecte final de grau, realitzat conjuntament amb un company. Consta d'una APP web que permet gestionar un negoci de restauració, des de l'enviament de comandes a cuina, seguiment de l'stock de l'establiment, fins al menú virtual, on el propi client, des del seu teléfon, és qui gestiona les seves comandes i els pagaments.</p>
+                    <p>Projecte final de grau, realitzat conjuntament amb un company. Consta d'una APP web que permet
+                        gestionar un negoci de restauració, des de l'enviament de comandes a cuina, seguiment de l'stock
+                        de l'establiment, fins al menú virtual, on el propi client, des del seu teléfon, és qui gestiona
+                        les seves comandes i els pagaments.</p>
                     <div class="tags">
                         <div class="tag">Symfony</div>
                         <div class="tag">Html</div>
@@ -195,7 +248,9 @@
                     <img src="assets/img/mecarun.png">
                 </div>
                 <div class="description">
-                    <p>Projecte d'E-commerce enfocat a la venta de productes per a motors de vehicles. Elaboració d'una plantilla feta a mida segons els requeriments del client adaptada a Woocommerce i la configuració d'aquet.</p>
+                    <p>Projecte d'E-commerce enfocat a la venta de productes per a motors de vehicles. Elaboració d'una
+                        plantilla feta a mida segons els requeriments del client adaptada a Woocommerce i la
+                        configuració d'aquet.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                         <div class="tag">Woocoommerce</div>
@@ -210,7 +265,8 @@
                     <img src="assets/img/aida.png">
                 </div>
                 <div class="description">
-                    <p>Projecte d'una página web a l'estil portafolis per a la consulta d'una psicologa especialista. Wordpress amb plantilla feta a mida i amb el seu propi blog.</p>
+                    <p>Projecte d'una página web a l'estil portafolis per a la consulta d'una psicologa especialista.
+                        Wordpress amb plantilla feta a mida i amb el seu propi blog.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                     </div>
@@ -224,7 +280,8 @@
                     <img src="assets/img/mysnikers.png">
                 </div>
                 <div class="description">
-                    <p>Projecte d'E-commerce destinat a la venda online de calçat, que requeria manteniment i la creació de noves funcionalitats.</p>
+                    <p>Projecte d'E-commerce destinat a la venda online de calçat, que requeria manteniment i la creació
+                        de noves funcionalitats.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                         <div class="tag">Woocoommerce</div>
@@ -239,7 +296,8 @@
                     <img src="assets/img/engiser.png">
                 </div>
                 <div class="description">
-                    <p>Mateniment i evolutius d'un projecte d'E-commerce destinat a la venda i subministrament de recanvis per a vehicles, que requeria manteniment i la creació de noves funcionalitats.</p>
+                    <p>Mateniment i evolutius d'un projecte d'E-commerce destinat a la venda i subministrament de
+                        recanvis per a vehicles, que requeria manteniment i la creació de noves funcionalitats.</p>
                     <div class="tags">
                         <div class="tag">Wordpress</div>
                         <div class="tag">Woocoommerce</div>
@@ -270,11 +328,13 @@
                     <path d="M6.745,40.5H42.5c1.933,0,3.5-1.567,3.5-3.5V11.5L6.745,40.5z" fill="#eee"></path>
                     <path d="M25.745,40.5H42.5c1.933,0,3.5-1.567,3.5-3.5V11.5L18.771,31.616L25.745,40.5z"
                           fill="#e0e0e0"></path>
-                    <path class="fill" d="M42.5,9.5h-37C3.567,9.5,2,9.067,2,11v26c0,1.933,1.567,3.5,3.5,3.5H7V12h34v28.5h1.5c1.933,0,3.5-1.567,3.5-3.5V11C46,9.067,44.433,9.5,42.5,9.5z"
+                    <path class="fill"
+                          d="M42.5,9.5h-37C3.567,9.5,2,9.067,2,11v26c0,1.933,1.567,3.5,3.5,3.5H7V12h34v28.5h1.5c1.933,0,3.5-1.567,3.5-3.5V11C46,9.067,44.433,9.5,42.5,9.5z"
                           fill="#ca3737"></path>
                     <path d="M42.5,7.5H24H5.5C3.567,7.5,2,9.036,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.036,44.433,7.5,42.5,7.5z"
                           fill="#f5f5f5"></path>
-                    <path class="fill" d="M43.246,7.582L24,21L4.754,7.582C3.18,7.919,2,9.297,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.297,44.82,7.919,43.246,7.582z"
+                    <path class="fill"
+                          d="M43.246,7.582L24,21L4.754,7.582C3.18,7.919,2,9.297,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.297,44.82,7.919,43.246,7.582z"
                           fill="#e84f4b"></path>
                 </svg>
             </a>
